# SpecReduce

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
include/: MRGatherer.hpp  compileAndExecute.hpp  fuzzingReduction.hpp  globals.hpp  helperFunctions.hpp  logging.hpp  opportunitiesGatherer.hpp  reductionEngine.hpp  reductionPass.hpp  reductionStep.hpp
scripts/: exec.py  interestingness.py
src/: MRGatherer.cpp  compileAndExecute.cpp  fuzzingReduction.cpp  gatherReductionOpportunities.cpp  globals.cpp  helperFunctions.cpp  logging.cpp  opportunitiesGatherer.cpp  reduceMetaTest.cpp  reduceRecursion.cpp  reduceVariants.cpp  reductionEngine.cpp  reductionPass.cpp  reductionStep.cpp
